JDK-8005821 : C2: -XX:+PrintIntrinsics is broken
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • Submitted: 2013-01-07
  • Updated: 2013-10-02
  • Resolved: 2013-01-16
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Related Reports
Duplicate :  
Description
% gamma -Xcomp -XX:-TieredCompilation -XX:+PrintIntrinsics t
Using java runtime at: /java/re/jdk/6u18/latest/binaries/solaris-amd64/jre
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0xfdc13662, pid=12336, tid=31
#
# JRE version: Java(TM) SE Runtime Environment (6.0_18-b07) (build 1.6.0_18-b07)
# Java VM: Java HotSpot(TM) Server VM (25.0-b15-internal-jvmg compiled mode solaris-x86 )
# Problematic frame:
# V  [libjvm.so+0x813662]  Compile::PrintInliningBuffer&GrowableArray<Compile::PrintInliningBuffer>::at(int)+0x32
#

V  [libjvm.so+0x813662]  Compile::PrintInliningBuffer&GrowableArray<Compile::PrintInliningBuffer>::at(int)+0x32
V  [libjvm.so+0x8135ea]  outputStream*Compile::print_inlining_stream()const+0x3a
V  [libjvm.so+0x8129ee]  void Compile::print_inlining(ciMethod*,int,int,const char*)+0x5e
V  [libjvm.so+0xe0ac2c]  JVMState*LibraryIntrinsic::generate(JVMState*)+0x1ec
V  [libjvm.so+0xb2d9fe]  void Parse::do_call()+0x72e