8005821: C2: -XX:+PrintIntrinsics is broken

Check all print inlining flags when processing inlining list.

Reviewed-by: kvn, twisti